--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>de.elia</groupId>
     <artifactId>ghost-main</artifactId>
-    <version>1.0</version>
+    <version>1.1</version>
     <packaging>jar</packaging>
 
     <name>GhostMain</name>
@@ -16,7 +16,7 @@
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <url>https://discord.gg/Kpt8kgkhMA , https://www.spigotmc.org/resources/ghost-main.102115/ , </url>
+    <url>https://discord.gg/Kpt8kgkhMA , https://www.spigotmc.org/resources/ghost-main.102115/</url>
 
     <build>
         <plugins>
