--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,7 +5,8 @@ api-version: 1.18
 authors: [ Elia ]
 description: The main plugin from the server
 website: https://discord.gg/Kpt8kgkhMA , https://www.spigotmc.org/resources/ghost-main.102115/ ,
-
+loadbefore:
+  - GhostWarp
 commands:
   information:
     description: Send information of the Plugin creator.
