Update Plugin loadbefore

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,6 +7,7 @@ description: The main plugin from the server
 website: https://discord.gg/Kpt8kgkhMA , https://www.spigotmc.org/resources/ghost-main.102115/ ,
 loadbefore:
   - GhostWarp
+  - Ghostchat
 commands:
   information:
     description: Send information of the Plugin creator.
