--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 
     <groupId>de.elia</groupId>
     <artifactId>ghost-main</artifactId>
-    <version>1.6.1</version>
+    <version>1.4</version>
     <packaging>jar</packaging>
 
     <name>GhostMain</name>
 
-    <description>The main plugin from Ghost</description>
+    <description>The main plugin from the server</description>
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -71,12 +71,6 @@
             <artifactId>paper-api</artifactId>
             <version>1.19-R0.1-SNAPSHOT</version>
             <scope>provided</scope>
-        </dependency>
-             </dependency>
-        <dependency>
-            <groupId>net.kyori</groupId>
-            <artifactId>adventure-text-minimessage</artifactId>
-            <version>4.11.0</version>
         </dependency>
     </dependencies>
 </project>
